# rust-axum-htmx-template

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_RU.md  build.rs  bun.lockb  cog.toml  package.json  renovate.json  tailwind.config.js
.github/workflows/: build-release.yaml  ci.yaml  release.yaml
.sqlx/: query-3686617bc834a7891383f51c2f0083eb49d4e753c5037549facb5662bd7b39ce.json
assets/scripts/: index.ts
migrations/: 20241024160859_add_migrate_table.down.sql  20241024160859_add_migrate_table.up.sql
src/: asset_cache.rs  config.rs  errors.rs  lib.rs  main.rs  state.rs
src/api/: asset_cache.rs  assets.rs  middlewares.rs  mod.rs  robots.rs  router.rs  state.rs
src/api/controllers/: mod.rs  variant_controller.rs
src/application/: mod.rs
src/application/commands/: create_variant_command.rs  mod.rs
src/application/commands/create_variant/: handler.rs  handler_test.rs  mod.rs
src/application/quiries/: create_variant_form_query.rs  mod.rs
src/domain/models/: variant.rs
src/infrastructure/repositories/: mod.rs  variant_repository.rs  variant_repository_test.rs
templates/: _base.html.jinja  _partial.html.jinja
templates/macros/: alert.html.jinja  button.html.jinja  input.html.jinja
templates/variant/: create-result.html.jinja  create.html.jinja
tests/: variant_api_tests.rs
