[package]
name = "rust-axum-htmx-template"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["tracing"] }
axum-htmx = { version = "0", git = "https://github.com/EgorHenek/axum-htmx" }
bytes = "1"
config = "0"
chrono = { version = "0", features = ["serde"] }
metrics = "0"
metrics-exporter-prometheus = "0"
minijinja = { version = "2", features = ["loader"] }
mockall = "0"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "macros",
  "sqlite",
  "migrate",
  "uuid",
  "chrono",
] }
thiserror = "1"
tower-http = { version = "0", features = [
  "trace",
  "timeout",
  "fs",
  "compression-br",
] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
validator = { version = "0.19", features = ["derive"] }
uuid = { version = "1", features = ["v7", "fast-rng", "serde"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "signal"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
debug = false

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
urlencoding = "2"
mime = "0.3"
